# skein

./: .gitignore  CHANGELOG-blender.md  CHANGELOG.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  Justfile  Makefile.toml  README.md  cargo-generate.toml  netlify.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: button.rs  docs_layout.rs  hero.rs  layout.rs  mobile_navigation.rs  mod.rs  navigation.rs  prose.rs
app/src/components/docs_layout/: prev_next_links.rs  table_of_contents.rs
app/src/pages/: blog.rs  blog_post.rs  doc_post.rs  home_page.rs  mod.rs  not_found.rs
assets/: debug.gltf  demo.gltf  event_ordering.gltf  hero-blender-components.avif  replace_material.blend  replace_material.gltf
assets/components_on_bone/: components_on_bone.gltf
assets/images/: scene-with-image.gltf
assets/images/advanced-use-cases/: material-library-bevy.avif  material-library-blender.avif
assets/images/introduction/: add-extension.avif  add-new-repository.avif  add-registry.avif  edit-menu.avif  get-extensions.avif  installed.avif  panel-bone.avif  panel-collection.avif  panel-light.avif  panel-scene.avif  post-drag-installation.avif  pre-drag-installation.avif  preferences.avif  search-menu.avif  skein-panel.avif
assets/releases/: index.json
assets/replace_material/: replace_material.gltf
assets/shaders/: force_field.wgsl
assets/test_extension_data/: bevy_skein_extension_usage.gltf
crates/cinnog_mod_blender_addon/: Cargo.toml  README.md
crates/cinnog_mod_blender_addon/src/: lib.rs
crates/cinnog_mod_markdown/: Cargo.toml
crates/cinnog_mod_markdown/src/: lib.rs  night-owlish.tmtheme
data/list_bevy_components/: README.md  bevy-0.18-rc.1.json  bevy_0.16.0.json  bevy_0.17-rc.1.json
docs/: bevy-remote-protocol.md  blender-addon-structure.md  build-a-level.md  collections-instances-and-library-overrides.md  compared-to-blenvy.md  components-as-apis.md  contributing.md  defaults-and-presets.md  exporting-materials-to-files.md  exporting-multiple-collections.md  exporting-the-basics.md  fetching-the-bevy-type-registry.md  getting-started.md  inserting-components.md  installation.md  mark-and-modify-blender-objects.md  migration-tools.md  overview.md  property-groups.md  quickstart.md  reflection.md  replace-a-blender-material.md  spawning-with-components.md  sync-cube-size-to-avian-collider.md  testing.md  using-blender-drivers.md  using-sub-assets.md
documentation/: replace_material.avif  replace_material_blend.avif  replace_material_blender.avif  replace_material_run.avif
examples/: README.md  component_tests.json  component_tests.rs  component_tests_extension_data.rs  component_tests_handle_image.rs  components_on_bone.avif  components_on_bone.rs  custom_brp_config.rs  debug.rs  event_ordering.rs  replace_material.md  replace_material.rs  without_blender.rs
extension/: __init__.py  blender_manifest.toml  cli_change_component_path.py  cli_dump_component_data.py  debug_check_object_bevy_components.py  default_registry.json  fetch_bevy_type_registry.py  form_to_object.py  form_to_object_test.py  gltf_export_extension.py  insert_bevy_component.py  object_to_form.py  op_append_component_list_entry.py  op_apply_preset.py  op_bake_lightmaps.py  op_debug_check_components.py  op_insert_component.py  op_insert_component_modal.py  op_registry_loading.py  op_remove_component.py  op_remove_component_list_entry.py  op_trigger_collection_exporters.py  properties_test.py  property_groups.py  property_groups_test.py  remove_bevy_component.py  skein_panel.py  skein_panel_presets.py  skein_sidepanel.py  test.py
extension/operators/: debug_check_object_bevy_components.py  fetch_bevy_type_registry.py  insert_bevy_component.py  remove_bevy_component.py
generator/: Cargo.toml
generator/src/: main.rs
src/: bevy_015_support.rs  brp.rs  internal.rs  lib.rs  main.rs  presets.rs  safelist.rs
style/: input.css
test-components/: Cargo.toml
test-components/src/: lib.rs
test-components/src/snapshots/: snapshot_component_value@aabb.snap  snapshot_component_value@ambient_light.snap  snapshot_component_value@an_optional_name__none.snap  snapshot_component_value@anchor.snap  snapshot_component_value@animation_graph_handle.snap  snapshot_component_value@animation_target.snap  snapshot_component_value@background_color.snap  snapshot_component_value@bloom-2.snap  snapshot_component_value@bloom-3.snap  snapshot_component_value@bloom.snap  snapshot_component_value@border_color.snap  snapshot_component_value@border_radius.snap  snapshot_component_value@box_shadow.snap  snapshot_component_value@box_shadow_samples.snap  snapshot_component_value@bucket_of_types.snap  snapshot_component_value@button.snap  snapshot_component_value@camera.snap  snapshot_component_value@camera2d.snap  snapshot_component_value@camera3d.snap  snapshot_component_value@cascade_shadow_config.snap  snapshot_component_value@cascades.snap  snapshot_component_value@cascades_frusta.snap  snapshot_component_value@cascades_visible_entities.snap  snapshot_component_value@chromatic_aberration.snap  snapshot_component_value@cluster_config.snap  snapshot_component_value@computed_node.snap  snapshot_component_value@content_size.snap  snapshot_component_value@contrast_adaptive_sharpening.snap  snapshot_component_value@cubemap_frusta.snap  snapshot_component_value@cubemap_visible_entities.snap  snapshot_component_value@cursor_icon.snap  snapshot_component_value@deferred_prepass.snap  snapshot_component_value@depth_of_field.snap  snapshot_component_value@directional_light.snap  snapshot_component_value@distance_fog.snap  snapshot_component_value@dynamic_scene_root.snap  snapshot_component_value@environment_map_light.snap  snapshot_component_value@frustum.snap  snapshot_component_value@image_node.snap  snapshot_component_value@inherited_visibility.snap  (+131 more)
tests/: integration.rs
tools/: blender_python_embedded_tests.py  combined_snapshots.json  combined_snapshots_potential_bugs.json  fetch-presets.nu  fetch-types.nu  gather-snapshots.nu  run-python-tests.nu
(+40 files in other folders)
