[package]
name = "bevy_skein"
description = "Process glTF extras when spawning Scenes to insert Components using Reflection, such as when using Blender as an editor"
version = "0.3.0"
authors = ["Chris Biscardi"]
repository = "https://github.com/rust-adventure/skein"
homepage = "https://bevyskein.dev/"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = [
    "assets/**/*",
    "test-project/**/*",
    ".github/**/*",
    "extension/**/*",
    "Justfile",
    "DESIGN.md",
]

[dependencies]
bevy_app = "0.17.0-dev"
bevy_log = "0.17.0-dev"
bevy_ecs = "0.17.0-dev"
bevy_gltf = "0.17.0-dev"
bevy_reflect = "0.17.0-dev"
bevy_scene = "0.17.0-dev"
bevy_remote = { version = "0.17.0-dev", optional = true }
bevy_platform = "0.17.0-dev"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
# bevy = { version = "0.17.0-dev", features = ["jpeg", "experimental_pbr_pcss"] }
bevy = "0.17.0-dev"
serde = { version = "1.0", features = ["derive"] }
test-components = { path = "./test-components" }

[features]
default = ["brp", "presets"]
# Serve the Bevy schema via BRP
brp = ["dep:bevy_remote"]
presets = ["brp"]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"
# links in documentation
doc_markdown = "deny"

[lints.rust]
missing_docs = "deny"

[package.metadata.bevy_lint]
missing_reflect = "deny"
