[package]
name = "bevy_skein"
description = "Process glTF extras when spawning Scenes to insert Components using Reflection, such as when using Blender as an editor"
version = "0.4.0"
authors = ["Chris Biscardi"]
repository = "https://github.com/rust-adventure/skein"
homepage = "https://bevyskein.dev/"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = [
    "assets/**/*",
    "test-project/**/*",
    ".github/**/*",
    "extension/**/*",
    "Justfile",
    "DESIGN.md",
]
rust-version = "1.88.0"

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
bevy_gltf = { git = "https://github.com/bevyengine/bevy.git" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git" }
bevy_scene = { git = "https://github.com/bevyengine/bevy.git" }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git" }
bevy_animation = { git = "https://github.com/bevyengine/bevy.git" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git" }
bevy_image = { git = "https://github.com/bevyengine/bevy.git" }
bevy_pbr = { git = "https://github.com/bevyengine/bevy.git" }
bevy_light = { git = "https://github.com/bevyengine/bevy.git" }
# bevy_app = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_log = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_ecs = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_gltf = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_reflect = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_scene = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_platform = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_animation = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_asset = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_image = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_pbr = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_light = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy_app = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_app" }
# bevy_log = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_log" }
# bevy_ecs = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_ecs" }
# bevy_gltf = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_gltf" }
# bevy_reflect = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_reflect" }
# bevy_scene = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_scene" }
# bevy_platform = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_platform" }
# bevy_animation = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_animation" }
# bevy_asset = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_asset" }
# bevy_image = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_image" }
# bevy_pbr = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_pbr" }
# bevy_light = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_light" }
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
gltf = "1.4.0"

# wasm can't support brp, so disable the dependency entirely
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# bevy_remote = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids", optional = true }
# bevy_remote = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions/crates/bevy_remote", optional = true }
bevy_remote = { git = "https://github.com/bevyengine/bevy.git", optional = true }


[dev-dependencies]
# bevy = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions" }
# bevy = { version = "0.17", features = ["jpeg", "experimental_pbr_pcss"] }
# bevy = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
bevy = { git = "https://github.com/bevyengine/bevy.git" }

serde = { version = "1.0", features = ["derive"] }
test-components = { path = "./test-components" }

[features]
default = ["brp", "presets"]
# Serve the Bevy schema via BRP
brp = ["dep:bevy_remote"]
presets = ["brp"]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"
# links in documentation
doc_markdown = "deny"

[lints.rust]
missing_docs = "deny"

[package.metadata.bevy_lint]
missing_reflect = "deny"
