[package]
name = "bevy_skein"
description = "Process glTF extras when spawning Scenes to insert Components using Reflection, such as when using Blender as an editor"
version = "0.6.0-dev"
authors = ["Chris Biscardi"]
repository = "https://github.com/rust-adventure/skein"
homepage = "https://bevyskein.dev/"
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = [
    "assets/**/*",
    "test-project/**/*",
    ".github/**/*",
    "extension/**/*",
    "Justfile",
    "DESIGN.md",
]
rust-version = "1.89.0"

[dependencies]
bevy_app = "0.19.0-dev"
bevy_log = "0.19.0-dev"
bevy_ecs = "0.19.0-dev"
bevy_gltf = "0.19.0-dev"
bevy_reflect = "0.19.0-dev"
bevy_world_serialization = "0.19.0-dev"
bevy_platform = "0.19.0-dev"
bevy_asset = "0.19.0-dev"
bevy_tasks = "0.19.0-dev"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
gltf = "1.4.0"

# wasm can't support brp, so disable the dependency entirely
[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy_remote = { version = "0.19.0-dev", optional = true }


[dev-dependencies]
bevy = { version = "0.19.0-dev" }

serde = { version = "1.0", features = ["derive"] }
test-components = { path = "./test-components" }

[features]
default = ["brp", "presets"]
# Serve the Bevy schema via BRP
brp = ["dep:bevy_remote"]
presets = ["brp"]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"
# links in documentation
doc_markdown = "deny"

[lints.rust]
missing_docs = "deny"

[package.metadata.bevy_lint]
missing_reflect = "deny"

[patch."crates-io"]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_log = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_gltf = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_world_serialization = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_platform = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_remote = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
