[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
cinnog.workspace = true

leptos.workspace = true
leptos_meta.workspace = true
tracing.workspace = true
bevy_ecs.workspace = true
serde.workspace = true
leptos-use = "0.15.7"
semver.workspace = true

leptos_router = { workspace = true, features = ["nightly"] }
cinnog_mod_markdown = { path = "../crates/cinnog_mod_markdown" }
cinnog_mod_blender_addon = { path = "../crates/cinnog_mod_blender_addon" }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
