[package]
name = "test-components"
description = "Components to aid in debugging and testing skein"
version = "0.1.0"
authors = ["Chris Biscardi"]
edition = "2024"

[dependencies]
bevy = "0.16.0-rc.1"
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
