[package]
name = "test-components"
description = "Components to aid in debugging and testing skein"
version = "0.1.0"
authors = ["Chris Biscardi"]
edition = "2024"

[dependencies]
# bevy = { git = "https://github.com/ChristopherBiscardi/bevy.git", branch = "yeet-extension-ids" }
# bevy = { path = "/Users/chris/github/bevyengine/bevy-gltf-extensions" }
bevy = { git = "https://github.com/bevyengine/bevy.git" }

serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
