[package]
name = "cinnog_mod_markdown"
version = "0.1.0"
edition = "2024"

[dependencies]
cinnog.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
comrak = { version = "0.36", optional = true }
gray_matter = "0.2.8"
syntect = { version = "5.2.0", optional = true }
serde.workspace = true


[features]
development = ["cinnog/development"]
generator = ["cinnog/generator", "dep:syntect", "dep:comrak"]
